# structer

./: .bazelignore  .gitignore  .upset  BUILD.bazel  CHANGELOG.md  Makefile  README.md  WORKSPACE  go.mod  go.sum  version.json
app/: BUILD.bazel  main.go
cmd/: BUILD.bazel  make.go  make_test.go  root.go  root_test.go
examples/: README.md
examples/input/: user.json  user.yaml
examples/input/hacl/: main.tf
examples/input/yaml/: doctrine.yaml  framework.yaml  security.yaml
pkg/structer/: BUILD.bazel  common.go  config.go  config_test.go  decoder.go  decoder_test.go  error.go  error_test.go  generator.go  generator_test.go  hcl.go  output.go  output_test.go  yaml.go  yaml_test.go
scripts/: .helper.sh  .values.sh  build.sh  install.sh  install_web.sh
