load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "go_default_library",
    srcs = [
        "common.go",
        "config.go",
        "generator.go",
        "output.go",
    ],
    importpath = "github.com/nv3-x/structer/pkg/structer",
    visibility = ["//visibility:public"],
)
